@@ -20,16 +20,19 @@
 ## -*- texinfo -*-
 ## @deftypefn  {} {} javaaddpath (@var{clspath})
 ## @deftypefnx {} {} javaaddpath (@var{clspath1}, @dots{})
+## @deftypefnx {} {} javaaddpath (@{@var{clspath1}, @dots{}@})
 ## @deftypefnx {} {} javaaddpath (@dots{}, "-end")
-## Add @var{clspath} to the dynamic class path of the Java virtual machine.
+## Add @var{clspath} to the beginning of the dynamic class path of the
+## Java virtual machine.
 ##
 ## @var{clspath} may either be a directory where @file{.class} files are
 ## found, or a @file{.jar} file containing Java classes.  Multiple paths may
-## be added at once by specifying additional arguments.
+## be added at once by specifying additional arguments, or by using a cell
+## array of strings.
 ##
-## If the final argument is @code{"-end"}, append the new element to the
-## end of the current classpath.  Otherwise, new elements are added at
-## the beginning of the path.
+## If the final argument is @qcode{"-end"}, append the new element to the
+## end of the current classpath.
+##
 ## @seealso{javarmpath, javaclasspath}
 ## @end deftypefn
 
@@ -39,14 +42,13 @@ function javaaddpath (varargin)
     print_usage ();
   endif
 
-  if (! iscellstr (varargin))
-    error ("javaaddpath: arguments must all be character strings");
+  if (! all (cellfun (@(c) ischar (c) || iscellstr (c), varargin)))
+    error ("javaaddpath: arguments must be strings or cell array of strings");
   endif
 
   if (strcmp (varargin{end}, "-end"))
     at_end = true;
-    nel = nargin - 1;
-    rng = 1:nel;
+    varargin(end) = [];
   else
     ## Note that when prepending, we iterate over the arguments in
     ## reverse so that a call like
@@ -54,28 +56,123 @@ function javaaddpath (varargin)
     ##   javaaddpath ("/foo", "/bar")
     ##
     ## results in "/foo" first in the path followed by "/bar".
-    nel = nargin;
     at_end = false;
-    rng = nel:-1:1;
+    varargin = fliplr (varargin);
   endif
 
-  for i = rng
-    clspath = varargin{i};
-    new_path = canonicalize_file_name (tilde_expand (clspath));
-    if (isfolder (new_path))
-      if (new_path(end) != filesep ())
-        new_path = [new_path, filesep()];
+  for arg = varargin
+    if (iscellstr (arg{1}))
+      if (at_end)
+        ## Guarantee cellstr array is a row vector
+        arg = arg{1}(:).';
+      else
+        ## Iterate in reverse over cell arrays
+        arg = fliplr (arg{1}(:).');
       endif
-    elseif (! exist (new_path, "file"))
-      error ("javaaddpath: CLSPATH does not exist: %s", clspath);
     endif
 
-    success = javaMethod ("addClassPath", "org.octave.ClassHelper",
-                          new_path, at_end);
+    for clspath = arg
+      clspath = clspath{1};
 
-    if (! success)
-      warning ("javaaddpath: failed to add '%s' to Java classpath", new_path);
-    endif
+      new_path = canonicalize_file_name (tilde_expand (clspath));
+      if (isfolder (new_path))
+        if (new_path(end) != filesep ())
+          new_path = [new_path, filesep()];
+        endif
+      elseif (! exist (new_path, "file"))
+        error ("javaaddpath: CLSPATH does not exist: %s", clspath);
+      endif
+
+      success = javaMethod ("addClassPath", "org.octave.ClassHelper",
+                            new_path, at_end);
+
+      if (! success)
+        warning ("javaaddpath: failed to add '%s' to Java classpath", new_path);
+      endif
+    endfor
   endfor
 
 endfunction
+
+
+## FIXME: These tests may fail if either TEMPDIR or HOME have already
+##        been added to the Java class path.
+
+## Basic prepend test with single string
+%!test
+%! pth = tempdir ();
+%! unwind_protect
+%!   clspth1 = javaclasspath ("-dynamic");
+%!   javaaddpath (pth);
+%!   clspth2 = javaclasspath ("-dynamic");
+%!   assert (clspth2{1}, canonicalize_file_name (pth));
+%!   assert (clspth2(2:end), clspth1(1:end));
+%! unwind_protect_cleanup
+%!   javarmpath (pth);
+%! end_unwind_protect
+
+## Prepend test with two strings
+%!test
+%! pth1 = tempdir ();
+%! pth2 = tilde_expand ("~");
+%! unwind_protect
+%!   clspth1 = javaclasspath ("-dynamic");
+%!   javaaddpath (pth1, pth2);
+%!   clspth2 = javaclasspath ("-dynamic");
+%!   assert (clspth2([1, 2]),
+%!           {canonicalize_file_name(pth1), canonicalize_file_name(pth2)});
+%!   assert (clspth2(3:end), clspth1(1:end));
+%! unwind_protect_cleanup
+%!   javarmpath (pth1, pth2);
+%! end_unwind_protect
+
+## Prepend test with cell array of two strings
+%!test
+%! pth1 = tempdir ();
+%! pth2 = tilde_expand ("~");
+%! unwind_protect
+%!   clspth1 = javaclasspath ("-dynamic");
+%!   javaaddpath ({pth1, pth2});
+%!   clspth2 = javaclasspath ("-dynamic");
+%!   assert (clspth2([1, 2]),
+%!           {canonicalize_file_name(pth1), canonicalize_file_name(pth2)});
+%!   assert (clspth2(3:end), clspth1(1:end));
+%! unwind_protect_cleanup
+%!   javarmpath (pth1, pth2);
+%! end_unwind_protect
+
+## Append test with two strings
+%!test
+%! pth1 = tempdir ();
+%! pth2 = tilde_expand ("~");
+%! unwind_protect
+%!   clspth1 = javaclasspath ("-dynamic");
+%!   javaaddpath (pth1, pth2, "-end");
+%!   clspth2 = javaclasspath ("-dynamic");
+%!   assert (clspth2([end-1, end]),
+%!           {canonicalize_file_name(pth1), canonicalize_file_name(pth2)});
+%!   assert (clspth2(1:end-2), clspth1(1:end));
+%! unwind_protect_cleanup
+%!   javarmpath (pth1, pth2);
+%! end_unwind_protect
+
+## Append test with cell array of two strings
+%!test
+%! pth1 = tempdir ();
+%! pth2 = tilde_expand ("~");
+%! unwind_protect
+%!   clspth1 = javaclasspath ("-dynamic");
+%!   javaaddpath ({pth1, pth2}, "-end");
+%!   clspth2 = javaclasspath ("-dynamic");
+%!   assert (clspth2([end-1, end]),
+%!           {canonicalize_file_name(pth1), canonicalize_file_name(pth2)});
+%!   assert (clspth2(1:end-2), clspth1(1:end));
+%! unwind_protect_cleanup
+%!   javarmpath (pth1, pth2);
+%! end_unwind_protect
+
+## Test input validation
+%!error <Invalid call> javaaddpath ()
+%!error <arguments must be strings> javaaddpath (5)
+%!error <arguments must be .* cell array of strings> javaaddpath ({5})
+%!error <CLSPATH does not exist> javaaddpath ("%_A_Very_Unlikely_Name_%")
